--- a/OCPLibrary/OCPLibrary.csproj
+++ b/OCPLibrary/OCPLibrary.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Accounts.cs" />
     <Compile Include="EmployeeModel.cs" />
+    <Compile Include="IAccounts.cs" />
+    <Compile Include="IApplicantModel.cs" />
     <Compile Include="PersonModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
